--- a/templates/show_employees.html
+++ b/templates/show_employees.html
@@ -5,10 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-
-{% include 'menu.html' %}
-
-<h3>Strona do testów</h3>
-
+<h3>Lista pracowników</h3>
 </body>
 </html>
