--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,8 +1,19 @@
 <table border="1">
     <tr><td>
-        <a href="/">Strona główna</a>
-    </td>
+            <a href="/">Strona główna</a>
+        </td>
+        <td>
+            <a href="/show_products">Lista produktów</a>
+        </td>
+        <td>
+            <a href="/show_employees">Lista pracowników</a>
+        </td>
+        <td>
+            <a href="/about">O programie</a>
+        </td>
         <td>
             <a href="/tests">Testy</a>
-        </td><td>C</td><TD>D</TD></tr>
+        </td>
+    </tr>
+{#    <tr><td>DUPA</td></tr>#}
 </table>
