--- a/templates/about.html
+++ b/templates/about.html
@@ -8,6 +8,12 @@
 
 {% include 'menu.html' %}
 
-<h3>Strona o programie</h3>
+<h3>Strona o programie - autor</h3>
+
+<table border="1">
+    <tr><td>Imię</td><td>{{ first_name }}</td></tr>
+    <tr><td>Nazwisko</td><td>{{ last_name }}</td></tr>
+    <tr><td>Email</td><td>{{ email }}</td></tr>
+</table>
 </body>
 </html>
