--- a/templates/about.html
+++ b/templates/about.html
@@ -11,9 +11,9 @@
 <h3>Strona o programie - autor</h3>
 
 <table border="1">
-    <tr><td>Imię</td><td>{{ first_name }}</td></tr>
-    <tr><td>Nazwisko</td><td>{{ last_name }}</td></tr>
-    <tr><td>Email</td><td>{{ email }}</td></tr>
+    <tr><td>Imię</td><td>{{ author.first_name }}</td></tr>
+    <tr><td>Nazwisko</td><td>{{ author.last_name }}</td></tr>
+    <tr><td>Email</td><td>{{ author.email }}</td></tr>
 </table>
 </body>
 </html>
