--- a/templates/show_employees.html
+++ b/templates/show_employees.html
@@ -9,5 +9,11 @@
 {% include 'menu.html' %}
 
 <h3>Lista pracowników</h3>
+<table border="1">
+    <tr><th>Id pracownika</th><th>Imię</th><th>Nazwisko</th><th>Akcje</th></tr>
+    {% for e in employees %}
+        <tr><td>{{ e.employee_id }}</td><td>{{ e.first_name }}</td><td>{{ e.last_name }}</td><td>---</td></tr>
+    {% endfor %}
+</table>
 </body>
 </html>
