--- a/templates/show_products.html
+++ b/templates/show_products.html
@@ -9,5 +9,12 @@
 {% include 'menu.html' %}
 
 <h3>Lista produktów</h3>
+
+<table border="1">
+    <tr><th>Id produktu</th><th>Nazwa</th><th>Akcje</th></tr>
+    {% for p in products %}
+        <tr><td>{{ p.product_id }}</td><td>{{ p.name }}</td><td>---</td></tr>
+    {% endfor %}
+</table>
 </body>
 </html>
