--- a/templates/show_employees.html
+++ b/templates/show_employees.html
@@ -12,7 +12,11 @@
 <table border="1">
     <tr><th>Id pracownika</th><th>Imię</th><th>Nazwisko</th><th>Akcje</th></tr>
     {% for e in employees %}
-        <tr><td>{{ e.employee_id }}</td><td>{{ e.first_name }}</td><td>{{ e.last_name }}</td><td>---</td></tr>
+        <tr><td>{{ e.employee_id }}</td><td>{{ e.first_name }}</td><td>{{ e.last_name }}</td>
+            <td>
+                <a href="/employee_details?id={{ e.employee_id }}">Pokaż szczegóły</a>
+            </td>
+        </tr>
     {% endfor %}
 </table>
 </body>
