--- a/templates/menu.html
+++ b/templates/menu.html
@@ -12,6 +12,9 @@
             <a href="/about">O programie</a>
         </td>
         <td>
+            <a href="/about.json">O programie [REST]</a>
+        </td>
+        <td>
             <a href="/tests">Testy</a>
         </td>
     </tr>
