--- a/templates/menu.html
+++ b/templates/menu.html
@@ -9,6 +9,9 @@
             <a href="/show_employees">Lista pracowników</a>
         </td>
         <td>
+            <a href="/employees.json">Lista pracowników [REST]</a>
+        </td>
+        <td>
             <a href="/about">O programie</a>
         </td>
         <td>
