--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,6 +6,9 @@
             <a href="/show_products">Lista produktów</a>
         </td>
         <td>
+            <a href="/products.json">Lista produktów [REST]</a>
+        </td>
+        <td>
             <a href="/show_employees">Lista pracowników</a>
         </td>
         <td>
