--- a/templates/show_employees.html
+++ b/templates/show_employees.html
@@ -9,6 +9,7 @@
 {% include 'menu.html' %}
 
 <h3>Lista pracowników</h3>
+<a href="/add_employee">Dodaj pracownika</a>
 <table border="1">
     <tr><th>Id pracownika</th><th>Imię</th><th>Nazwisko</th><th>Akcje</th></tr>
     {% for e in employees %}
