--- a/templates/show_products.html
+++ b/templates/show_products.html
@@ -9,7 +9,7 @@
 {% include 'menu.html' %}
 
 <h3>Lista produktów</h3>
-
+<a href="/add_product">Dodaj produkt</a>
 <table border="1">
     <tr><th>Id produktu</th><th>Nazwa</th><th>Akcje</th></tr>
     {% for p in products %}
